mini-update on MoveStudent and EndTurnOfActionPhase